--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
